# turtlebot_vrc

./: .gitignore  README.md  start_hospital.sh
src/turtlebot_vrc/: .gitignore  package.xml  setup.cfg  setup.py  start_hospital.sh
src/turtlebot_vrc/launch/: hospital.launch.py.backup  hospital_slam.launch.py
src/turtlebot_vrc/turtlebot_vrc/: map_explorer.py  voice_control.py
src/turtlebot_vrc/worlds/: hospital.world  hospital_4rooms.world  hospital_complete.world  hospital_simple.world  hospital_vrc.world
